--- a/_data/students.yml
+++ b/_data/students.yml
@@ -8,18 +8,27 @@
 #  education3:
 #  education4:
 
-- name: Ilse Kuijf 
+- name: Keaton Townley
   photo: rock.jpg
-  info: Master student
-  email: m.ortego.larrazabal@umail.leidenuniv.nl
+  info: MA student
   number_educ: 0
   education1:
 
-- name: Tessa Van der Ent
+- name: Tailai Shen
   photo: rock.jpg
-  info: Master student
-  email: m.ortego.larrazabal@umail.leidenuniv.nl
+  info: MA student
+  number_educ: 0
+  education1:
+
+- name: Delilah Catron
+  photo: rock.jpg
+  info: MA student
   number_educ: 0
   education1:
 
 
+- name: Yingqi Rong
+  photo: rock.jpg
+  info: MA student
+  number_educ: 0
+  education1:
