--- a/_data/news.yml
+++ b/_data/news.yml
@@ -8,7 +8,7 @@
   headline: "Emalie's [social action features paper](https://www.cell.com/current-biology/pdf/S0960-9822(23)01373-8.pdf) accepted at Current Biology!"
 
 - date: 1 Oct 2023
-  headline: "Welcome new PhD students, [Yash](https://yashsmehta.github.io/) and [Ananya](https://cogsci.jhu.edu/directory/ananya-passi/)!"
+  headline: "Welcome new PhD students, [Yash](https://yashsmehta.github.io/), [Ray](https://cogsci.jhu.edu/2023/08/29/meet-our-new-graduate-students/), and [Ananya](https://cogsci.jhu.edu/directory/ananya-passi/)!"
 
 - date: 1 Aug 2023
   headline: "[Colin Conwell](https://colinconwell.github.io/) joins the lab as a PostDoc!"
