--- a/_data/team_lead.yml
+++ b/_data/team_lead.yml
@@ -6,3 +6,4 @@
   gscholar: https://scholar.google.com/citations?user=zMTnSe8AAAAJ&hl=en&inst=7575085548378563675
   cv: mick_resume.pdf
   twitter: michaelfbonner
+  github: 
