--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,6 +1,6 @@
 - name: Colin Conwell
   photo: colin.jpg
-  role: Postdoc, started Aug 2023
+  role: PostDoc, started Aug 2023
   gscholar: https://scholar.google.com/citations?user=6tCow3oAAAAJ&hl=en&inst=7575085548378563675
   website: https://colinconwell.github.io/
   github: https://github.com/colinconwell
@@ -8,7 +8,7 @@
 
 - name: Emalie McMahon
   photo: emalie.jpg
-  role: PhD Student
+  role: PhD Student, Cognitive Science
   website: https://emaliemcmahon.github.io/
   gscholar: https://scholar.google.com/citations?user=mOTMCr4AAAAJ&hl=&inst=7575085548378563675
   twitter: https://twitter.com/emaliemcmahon
@@ -16,14 +16,14 @@
 
 - name: Raj Magesh Gauthaman
   photo: raj.jpg
-  role: PhD Student
+  role: PhD Student, Cognitive Science
   website: https://raj-magesh.org/
   email: rgautha1@jh.edu
 
 
 - name: Kelsey Han
   photo: kelsey.jpg
-  role: PhD Student
+  role: PhD Student, Cognitive Science
   website: https://kelseyhan-jhu.github.io/
   email: chan21@jhu.edu
   gscholar: https://scholar.google.com/citations?hl=en&user=ZN77OiqrzrIC&inst=7575085548378563675
@@ -33,7 +33,7 @@
 
 - name: Yash Mehta
   photo: yash.jpg
-  role: PhD student
+  role: PhD Student, Cognitive Science
   website: https://yashsmehta.github.io/
   gscholar: https://scholar.google.com/citations?user=zFqBbIkAAAAJ&hl=en
   twitter: y_mehtu
@@ -42,13 +42,13 @@
 
 - name: Zirui Chen
   photo: ray.jpg
-  role: PhD Student
+  role: PhD Student, Cognitive Science
   email: zchen160@jhu.edu
 
 
 - name: Ananya Passi
   photo: ananya.jpg
-  role: PhD student
+  role: PhD Student, Cognitive Science
   website: https://scholar.google.com/citations?user=qbvt7EUAAAAJ&hl=en&inst=7575085548378563675
   email: apassi1@jhu.edu
 
