--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -8,14 +8,6 @@
   highlight: 1
   news1: Visit ^website for tutorial materials.
 
-- title: "Contextual coherence increases perceived numerosity independent of semantic content."
-  image: context_coherence.png
-  description: Characterizing visual features that systematically bias our numerosity perception promises to uncover the processes that form ANS representations. Recent work demonstrated that reducing coherence of low-level visual attributes such as color and orientation systematically reduces perceived numerosity. Here we ask whether the coherence effect is exclusive to low-level visual features or instead whether it can be driven by higher-level features.
-  authors: Chuyan Qu; Michael F. Bonner; Elizabeth M. Brannon 
-  link:
-    url: https://jov.arvojournals.org/article.aspx?articleid=2792646
-    display: Vision Sciences Society (2023)
-  highlight: 1
 
 - title: "High-performing neural network models of visual cortex benefit from high latent dimensionality"
   image: high_dimensionality.png
@@ -25,4 +17,45 @@
     url: https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1011792
     display: PLOS Computational Biology (2023)
   highlight: 1 
+
+
+  - title: "Contextual coherence increases perceived numerosity independent of semantic content."
+  image: context_coherence.png
+  description: Characterizing visual features that systematically bias our numerosity perception promises to uncover the processes that form ANS representations. Recent work demonstrated that reducing coherence of low-level visual attributes such as color and orientation systematically reduces perceived numerosity. Here we ask whether the coherence effect is exclusive to low-level visual features or instead whether it can be driven by higher-level features.
+  authors: Chuyan Qu; Michael F. Bonner; Elizabeth M. Brannon 
+  link:
+    url: https://jov.arvojournals.org/article.aspx?articleid=2792646
+    display: Vision Sciences Society (2023)
+  highlight: 1
+
+  
+- title: Hierarchical organization of social action features along the lateral visual pathway
+  authors: Emalie McMahon, Michael F. Bonner, Leyla Isik
+  image: social_action_features.png
+  description: Like visual representations in the ventral and dorsal streams, representations in the lateral stream are thought to be hierarchically organized. However, no prior studies have comprehensively investigated the organization of naturalistic, social visual content in the lateral stream. To address this question, we curated a naturalistic stimulus set of 250 3-s videos of two people engaged in everyday actions. Each clip was richly annotated for its low-level visual features, mid-level scene and object properties, visual social primitives (including the distance between people and the extent to which they were facing), and high-level information about social interactions and affective content.
+  link:
+    url: https://pubmed.ncbi.nlm.nih.gov/37918399/
+    display: Cell Current Biology (2023)
+  highlight: 1 
+
+
+- title: Object representations in the human brain reflect the co-occurrence statistics of vision and language
+  authors: Michael F. Bonner, Russell Epstein
+  image: obj_to_vec.png
+  description: We use machine learning and fMRI to test the hypothesis that object co-occurrence statistics are encoded in the human visual system and elicited by the perception of individual objects. We identified low-dimensional representations that capture the latent statistical structure of object co-occurrence in real-world scenes, and we mapped these statistical representations onto voxel-wise fMRI responses during object viewing. We found that cortical responses to single objects were predicted by the statistical ensembles in which they typically occur, and that this link between objects and their visual contexts was made most strongly in parahippocampal cortex, overlapping with the anterior portion of scene-selective parahippocampal place area.
+  link:
+    url: https://www.nature.com/articles/s41467-021-24368-2
+    display: Nature Communications (2021)
+  highlight: 1 
+
+
+- title: Coding of navigational affordances in the human visual system
+  authors: Michael F. Bonner, Russell Epstein
+  image: navigational_affordances.png
+  description: A central component of spatial navigation is determining whereone can and cannot go in the immediate environment. We usedfMRI to test the hypothesis that the human visual system solvesthis problem by automatically identifying the navigational affor-dances of the local scene. Multivoxel pattern analyses showed thata scene-selective region of dorsal occipitoparietal cortex, known asthe occipital place area, represents pathways for movement inscenes in a manner that is tolerant to variability in other visualfeatures. 
+  link:
+    url: https://www.pnas.org/doi/full/10.1073/pnas.1618228114
+    display: PNAS 2017
+  highlight: 1 
+  
   
