--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -30,7 +30,6 @@
   twitter: ckelseyhan
 
 
-
 - name: Yash Mehta
   photo: yash.jpg
   role: PhD Student, Cognitive Science
@@ -43,6 +42,8 @@
 - name: Zirui Chen
   photo: ray.jpg
   role: PhD Student, Cognitive Science
+  website: https://zche377.github.io/
+  twitter: RayChen44
   email: zchen160@jhu.edu
 
 
