--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   headline: "Eric's [high latent dimensionality paper](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1011792) out in PLOS comp bio!"
 
 - date: 13 Nov 2023 - 22 Dec 2023
-  headline: "Mick at the Kavli Institute for [Deep Learning from the Perspective of Physics and Neuroscience](https://www.kitp.ucsb.edu/activities/deeplearning23) workshop"
+  headline: "Prof. Bonner at the Kavli Institute for [Deep Learning from the Perspective of Physics and Neuroscience](https://www.kitp.ucsb.edu/activities/deeplearning23) workshop"
 
 - date: 5 Oct 2023
   headline: "Emalie's [social action features paper](https://www.cell.com/current-biology/pdf/S0960-9822(23)01373-8.pdf) accepted at Current Biology!"
@@ -15,6 +15,9 @@
 
 - date: 23 June 2023
   headline: "Caterina and Eric's [paper on contextual prototypes](https://www.sciencedirect.com/science/article/pii/S0010027723001695) accepted at Cognition!"
+
+- date: 9 May 2023
+  headline: "Prof. Bonner receives [Johns Hopkins Catalyst Award](https://research.jhu.edu/major-initiatives/catalyst-awards/2023-awardees/)!"
 
 - date: 12 April 2023
   headline: Congratulations to Eric for being awarded the Vanier scholarship!
