--- a/_data/collaborators.yml
+++ b/_data/collaborators.yml
@@ -14,8 +14,8 @@
   number_educ: 0
   education1:
 
-- name: Russell Epstein
+- name: Brian Robinson
   photo: rock.jpg
-  info: Psychology, UPenn
+  info: Applied Physics Laboratory (APL)
   number_educ: 0
   education1:
