--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 3 April 2024
+  headline: "Prof. Bonner's invited lecture at the [Kavli Neuroscience Discovery Institute](https://kavlijhu.org/)!"
+
 - date: 23 Jan 2024
   headline: "Eric's [high latent dimensionality paper](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1011792) out in PLOS comp bio!"
 
@@ -9,6 +12,9 @@
 
 - date: 1 Oct 2023
   headline: "Welcome new PhD students, [Yash](https://yashsmehta.github.io/), [Ray](https://cogsci.jhu.edu/2023/08/29/meet-our-new-graduate-students/), and [Ananya](https://cogsci.jhu.edu/directory/ananya-passi/)!"
+
+- date: 23 Aug 2023
+  headline: "Bonner lab gives keynote talk and tutorial at [CCN conference](https://2024.ccneuro.org/) in Oxford, UK."
 
 - date: 1 Aug 2023
   headline: "[Colin Conwell](https://colinconwell.github.io/) joins the lab as a PostDoc!"
