--- a/_data/team_lead.yml
+++ b/_data/team_lead.yml
@@ -1,4 +1,4 @@
-- name: Mick Bonner
+- name: Michael Bonner
   photo: mick.jpg
   role: Assistant professor
   info: PhD, University of Pennsylvania
