--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 7 May 2024
+  headline: "Prof. Bonner awarded [IDIES Seed Funding Award](https://www.idies.jhu.edu/what-we-offer/funding/seed/seed-funding-awardees/) from Hopkins."
+
 - date: 3 April 2024
   headline: "Prof. Bonner's invited lecture at the [Kavli Neuroscience Discovery Institute](https://kavlijhu.org/)!"
 
@@ -25,6 +28,5 @@
 - date: 9 May 2023
   headline: "Prof. Bonner receives [Johns Hopkins Catalyst Award](https://research.jhu.edu/major-initiatives/catalyst-awards/2023-awardees/)!"
 
-- date: 12 April 2023
-  headline: Congratulations to Eric for being awarded the Vanier scholarship!
-
+- date: 12 april 2023
+  headline: congratulations to eric for being awarded the vanier scholarship!
