updated lab name in metadata

--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The Bonner Lab
-email: mfbonner@jhu.edu
+title: Bonner JHU CogNeuro and Deep Learning Lab
+email: mfbonner@jh.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Website of the BonnerLab.
+  Website of the cognitive neuroscience and deep learning group at Johns Hopkins University.
 baseurl: ""
 url: ""
 
