--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -54,9 +54,8 @@
   email: apassi1@jhu.edu
 
 
-- name: Atlas Kazemian
-  photo: atlasd.jpg
-  role: Lab Manager
-  website: https://akazemian.github.io/personal_profile/
-  email: atlaskazemian@gmail.com
-  twitter: AtlasKazemian
+- name: Caitlin Sim
+  photo: caitlin.jpg
+  role: PhD Student, Cognitive Science
+  website: https://www.linkedin.com/in/caitlinsim/ 
+  email: csim1@jh.edu
