--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 23 Aug 2024
+  headline: "Welcome [Caitlin](https://www.linkedin.com/in/caitlinsim/), our newest PhD student, jointly supervised with [Prof. Brice Menard](https://physics-astronomy.jhu.edu/directory/brice-menard/)!"
+
 - date: 7 May 2024
   headline: "Prof. Bonner awarded [IDIES Seed Funding Award](https://www.idies.jhu.edu/what-we-offer/funding/seed/seed-funding-awardees/) from Hopkins."
 
