--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -57,5 +57,5 @@
 - name: Caitlin Sim
   photo: caitlin.jpg
   role: PhD Student, Cognitive Science
-  website: https://www.linkedin.com/in/caitlinsim/ 
+  gscholar: https://scholar.google.com/citations?user=SSBiVNYAAAAJ&hl=en
   email: csim1@jh.edu
