--- a/_data/alumni_bsc.yml
+++ b/_data/alumni_bsc.yml
@@ -1,7 +1,9 @@
+- name: Shreya Wadhwa, CS & CogSci'23
+
+- name: Jiayu Shao, CogSci'23
+
 - name: Neha Nandiwada, CS & CogSci'22
 
 - name: Ajay Ananthakrishnan, Neuroscience'22
-
-- name: Jiayu Shao, CogSci'23
 
 - name: Adyant Balaji, CS & Neuroscience'22
