--- a/_data/alumni_msc.yml
+++ b/_data/alumni_msc.yml
@@ -1,5 +1,11 @@
-- name: Wanyi Guo, Graduated 2020
+- name: Keaton Townley, Graduated 2024
+
+- name: Tailai Shen, Graduated 2024
+
+- name: Delilah Catron, Graduated 2024
+
+- name: Yingqi Rong, Graduated 2024
 
 - name: Feikai Lin, Graduated 2021
 
-- name: Keaton Townley, Graduated 2024
+- name: Wanyi Guo, Graduated 2020
