--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,7 +1,17 @@
+- title: "Universal scale-free representations in human visual cortex"
+  image: scale_free_reps.png
+  description: Is it possible to deeply understand neural representations through dimensionality reduction? Our recent work demonstrates that the visual representations in the human brain require interpretation within high-dimensional spaces. Moreover, we reveal that traditional methods like representational similarity analysis fail to detect this high-dimensional information in cortical activity; instead, a spectral approach is necessary. This research uncovers a vast expanse of uncharted dimensions that conventional techniques have overlooked but may be crucial for decoding the cortical code of human vision.
+  authors: Raj Magesh Gauthaman, Brice Ménard, Michael F. Bonner
+  link:
+    url: https://arxiv.org/abs/2409.06843
+    display: Arxiv (2024)
+  highlight: 1
+
+
 - title: "Universal dimensions of visual representation"
   image: universal_dim.png
   description: We examined whether visual neural networks align with brain representations due to shared constraints or universal features. Analysis of diverse networks revealed shared latent dimensions for image representation. Comparing these to human fMRI data showed brain-aligned representations are universal across networks. This suggests similarities between artificial and biological vision arise from core universal image representations learned convergently.
-  authors: Zirui Chen, Michael F. Bonner;
+  authors: Zirui Chen, Michael F. Bonner
   link:
     url: https://arxiv.org/abs/2408.12804
     display: Arxiv (2024)
@@ -9,8 +19,8 @@
 
 - title: "Convolutional architectures are cortex-aligned de novo"
   image: untrained_cortex_alignment.png
-  description: Researchers found that untrained convolutional neural networks can produce brain-like visual representations. This challenges the view that extensive training is necessary for such similarities. The key factors are the networks' architecture, specifically how they compress spatial information and expand feature information. This suggests that the basic structure of convolutional networks mimics biological vision constraints, allowing for cortex-like representations even without learning from experience.
-  authors: Atlas Kazemian; Eric Elmoznino; Michael F. Bonner;
+  description: We find that untrained convolutional neural networks can produce brain-like visual representations. This challenges the view that extensive training is necessary for such similarities. The key factors are the networks' architecture, specifically how they compress spatial information and expand feature information. This suggests that the basic structure of convolutional networks mimics biological vision constraints, allowing for cortex-like representations even without learning from experience.
+  authors: Atlas Kazemian, Eric Elmoznino, Michael F. Bonner
   link:
     url: https://www.biorxiv.org/content/biorxiv/early/2024/05/14/2024.05.10.593623.full.pdf
     display: BioRxiv (2024)
